# energyoptimizer

./: .env.local  README.md  pyproject.toml
src/energyoptimizer/: batteryopt.py  batteryopt_interface.py  batteryopt_utils.py  optimization_runner.py  optimizers.py  scenario_runner.py
src/energyoptimizer/meterdata/: meter_data.py
src/energyoptimizer/solar/: solar_utils.py
src/energyoptimizer/tariff/: tariff_utils.py  tariffs.yaml
src/weboptimizer/: consumer_solar_backend.py  consumer_solar_sizing.py  sales_engineering_backend.py  sales_engineering_solar_sizing.py
tests/: test_batteryopt_interfaces.py  test_batteryopt_utils.py  test_optimization_runner.py  test_optimizer.py  test_scenario_runner.py  test_selfconsumption.py  test_tariff.py  test_utils.py
