[tool.poetry]
name = "energyoptimizer"
version = "0.1.0"
description = "energy optimization tools for scalable DER design and control"
authors = ["emunsing <eric.munsing@gmail.com>"]
license = "commercial license required"
readme = "README.md"
packages = [
    { include = "energyoptimizer", from = "src" }
]


[tool.poetry.dependencies]
python = "^3.12"
pandas = "*"
numpy = "*"
cvxpy = "*"
pvlib = "*"
pytest = "*"
pyyaml = "*"
attrs = "*"

[tool.poetry.group.webapp]
optional = true
[tool.poetry.group.webapp.dependencies]
panel = "*"

[tool.poetry.group.analytics]
optional = true
[tool.poetry.group.analytics.dependencies]
matplotlib = "*"
plotly = "*"
jupyter = "*"
ipykernel = "*"
pandas = "*"
seaborn = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
